refactor: apply MVVM code-review fixes and resolve all nullCheck errors
- Remove JavaFX ObservableList and focusedItemProperty from AFFrProject
  (plain List); move both to ProjectViewModel where they belong
- Extract model-compatibility constraint logic from
  NewCalculationDialogController into new ModelConstraints domain class;
  fix EXTRA_COMPATIBLE self-inclusion bug for PARTICLE_TRACK, POROUS_MODEL,
  GHOST_FLUID, OVERSET_GRID; use Set.copyOf instead of unmodifiableSet
- Move CtlReader.read() off the JavaFX Application Thread via a virtual-thread
  Task; add null guard for task.getValue()
- Replace all platform Thread constructors with Thread.ofVirtual() in
  ProjectController, FileBrowserController, TopController
- Consolidate showError/showInlineError into two overloads in ProjectController
- Add AFFrCalProperty.withStatus() convenience helper; use it in ProjectWriter
- Resolve 17 Checker Framework nullness errors:
  - ModelConstraints: split double BASIC_ALLOWED.get() to avoid nullable
    EnumSet.copyOf argument
  - ProjectController: explicit null check for getResource() URL, null guard
    for FXML controller, Optional<@Nullable …> type annotations, for-loop
    selectedCalculations() using pattern matching
  - CtlReader: null guard for Matcher.group(1)
  - ProjectLoader: add requireString() helper returning @NonNull String
  - javafx.astub: FXMLLoader.load() annotated @NonNull T, add
    Control.setContextMenu(@Nullable) stub
- Migrate ObservableList and focusedItem tests from AFFrProjectTest into
  ProjectViewModelTest; add defensive-copy test to AFFrProjectTest
- Add ModelConstraintsTest (8 tests) and AFFrCalProperty.withStatus() tests

Co-authored-by: Cursor <cursoragent@cursor.com>